src/components/Card/index.css
.cardsContainer {
  position: relative;
}

.card {
  background-color: beige;
  color: #333;
  border-radius: 10px;
  border: 2px solid black;
  margin: 0 auto;
  padding: 2em;
  text-align: center;
  position: absolute;
  top: 0;
  left: 50%;
  transform: translateX(-50%);
  transition: all 500ms;
  min-width: 300px;

  &.satisfied {
    animation: satisfied 1000ms ease-out forwards;
  }

  &.dissatisfied {
    animation: dissatisfied 1000ms ease-out forwards;
  }

  &.satisfied,
  &.dissatisfied {
    .front {
      display: none;
    }

    .back {
      display: initial;
    }
  }

  .term {
    font-weight: bold;
    font-size: 32pt;
    white-space: pre-wrap;
    word-wrap: break-word;
  }

  &.emojiOnly .term {
    font-size: 64pt;
  }

  .definition {
    white-space: pre-wrap;
    word-wrap: break-word;
  }

  &.answering.revealed {
    .front {
      display: none;
    }

    .back {
      display: initial;

      .definition {
        animation: reveal 1000ms ease forwards;
      }
    }
  }

  .back {
    display: none;
  }
}

@keyframes reveal {
  0% {
    max-height: 0vh;
    opacity: 0;
  }

  50% {
    opacity: 1;
  }

  100% {
    max-height: 100vh;
  }
}

@keyframes satisfied {
  25% {
    opacity: 1;
  }

  75% {
    translate: 200%;
    opacity: 0;
  }

  99% {
    z-index: 1;
  }

  100% {
    rotate: 30deg;
    opacity: 0;
    z-index: -1;
  }
}

@keyframes dissatisfied {
  25% {
    opacity: 1;
  }

  75% {
    translate: -200%;
    opacity: 0;
  }

  99% {
    z-index: 1;
  }

  100% {
    rotate: -30deg;
    opacity: 0;
    z-index: -1;
  }
}

